2017-11-26  Bruno Haible  <bruno@clisp.org>

	Fix bugs in ari_asm for sparc64.
	* ari_asm_sparc64.d (asm_or_loop_up, asm_xor_loop_up, asm_and_loop_up,
	asm_eqv_loop_up, asm_nand_loop_up, asm_nor_loop_up, asm_andc2_loop_up,
	asm_orc2_loop_up) [COUNTER_LOOPS]: Write into xptr[], not into yptr[].
	(asm_add_loop_down): Write result into the right location.
	(asm_addto_loop_down) [COUNTER_LOOPS]: Optimize.
	(asm_sub_loop_down) [COUNTER_LOOPS]: Write result into the right
	location.
	(asm_subx_loop_down): Write result into the right location.
	(asm_subfrom_loop_down): Produce dest-source, not source-dest.
	(asm_shiftleftcopy_loop_down): Use correct register.
	(asm_neg_loop_down) [COUNTER_LOOPS]: Optimize.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Fix bugs in the COUNTER_LOOPS implementation of ari_asm for SPARC.
	* ari_asm_sparc.d (asm_or_loop_up, asm_xor_loop_up, asm_and_loop_up,
	asm_eqv_loop_up, asm_nand_loop_up, asm_nor_loop_up, asm_andc2_loop_up,
	asm_orc2_loop_up): Write into xptr[], not into yptr[].

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Fix bug in ari_asm for mips64.
	* ari_asm_mips64.d (asm_subx_loop_down): Expect the 5th argument in $8,
	not on the stack.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Add a facility for checking and debugging the ari_asm_* code.
	* arilev1.d: When DEBUG_ARI_ASM is defined, select LOOP_DEBUG_ASM and
	include arilev1dbg.c.
	* arilev1c.d: Apply C() macro to the name of each function.
	* arilev1dbg.d: New file.
	* makemake.in (LISPARIT_INCLUDES): Add it.
	* Makefile.devel (build-porting*-debug_ari_asm): New targets.
	(multibuild-linux-hppa, multibuild-linux-i386): Depend on
	build-porting32-gcc-debug_ari_asm.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Don't install signal handlers for SIGABRT and SIGILL.
	* spvw_sigterm.d (set_sigterm_handler): Don't install a handler for
	SIGABRT or SIGILL.
	* spvw.d (fill_terminating_signals_mask): Update accordingly.

2017-11-25  Bruno Haible  <bruno@clisp.org>
